side-bar: skeleton

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-theme="main">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
     <link rel="stylesheet" href="/src/index.css" />
   </head>
-  <body>
+  <body data-theme="main-theme">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
